@@ -5905,74 +5905,11 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|ord
-operator|<
-operator|-
-literal|1
-operator|||
-name|ord
-operator|>=
-name|numTerms
-condition|)
-block|{
 throw|throw
 operator|new
-name|IOException
-argument_list|(
-literal|"ord is out of range: ord="
-operator|+
-name|ord
-operator|+
-literal|", numTerms="
-operator|+
-name|numTerms
-argument_list|)
+name|UnsupportedOperationException
+argument_list|()
 throw|;
-block|}
-if|if
-condition|(
-name|ord
-operator|<
-name|this
-operator|.
-name|ord
-condition|)
-block|{
-name|reset
-argument_list|()
-expr_stmt|;
-block|}
-for|for
-control|(
-name|int
-name|i
-init|=
-name|this
-operator|.
-name|ord
-init|;
-name|i
-operator|<
-name|ord
-condition|;
-operator|++
-name|i
-control|)
-block|{
-name|next
-argument_list|()
-expr_stmt|;
-block|}
-assert|assert
-name|ord
-operator|==
-name|this
-operator|.
-name|ord
-argument_list|()
-assert|;
 block|}
 annotation|@
 name|Override
@@ -5998,9 +5935,11 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-return|return
-name|ord
-return|;
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
 block|}
 annotation|@
 name|Override
