@@ -36,9 +36,165 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|document
+operator|.
+name|Document
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Field
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|FieldType
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|TextField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|AtomicReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|index
 operator|.
 name|BaseTermVectorsFormatTestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|RandomIndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|Terms
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TermsEnum
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TermsEnum
+operator|.
+name|SeekStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|BytesRef
 import|;
 end_import
 
@@ -71,6 +227,192 @@ name|random
 argument_list|()
 argument_list|)
 return|;
+block|}
+comment|// https://issues.apache.org/jira/browse/LUCENE-5156
+DECL|method|testNoOrds
+specifier|public
+name|void
+name|testNoOrds
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|iw
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|FieldType
+name|ft
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|TextField
+operator|.
+name|TYPE_NOT_STORED
+argument_list|)
+decl_stmt|;
+name|ft
+operator|.
+name|setStoreTermVectors
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"this is a test"
+argument_list|,
+name|ft
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|AtomicReader
+name|ir
+init|=
+name|getOnlySegmentReader
+argument_list|(
+name|iw
+operator|.
+name|getReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Terms
+name|terms
+init|=
+name|ir
+operator|.
+name|getTermVector
+argument_list|(
+literal|0
+argument_list|,
+literal|"foo"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|terms
+argument_list|)
+expr_stmt|;
+name|TermsEnum
+name|termsEnum
+init|=
+name|terms
+operator|.
+name|iterator
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|SeekStatus
+operator|.
+name|FOUND
+argument_list|,
+name|termsEnum
+operator|.
+name|seekCeil
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+literal|"this"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|termsEnum
+operator|.
+name|ord
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|expected
+parameter_list|)
+block|{
+comment|// expected exception
+block|}
+try|try
+block|{
+name|termsEnum
+operator|.
+name|seekExact
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|expected
+parameter_list|)
+block|{
+comment|// expected exception
+block|}
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
